--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             </section>
             <hr class="section-divider">
-            <img src="Dube.jpg" alt="Madhavi Dube" class="profile-img">
+            <img src="Dube.jpeg" alt="Madhavi Dube" class="profile-img">
             <div class="bio">
                 <h2>Madhavi Dube</h2>
             </div>
