changes for background image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
         <main>
             <section id="home">
-                <div class="background-overlay"></div>
+                <img src="graduation3.png" class="background-overlay">
             </div>
             </section>
             <hr class="section-divider">
