--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Madhavi Dube's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        #home {
+            position: relative;
+            background: url('graduation3.png') no-repeat center center;
+            background-size: cover;
+            height: 500px; /* Adjust the height as needed */
+            width: 100%;
+            margin-bottom: 0.5cm;
+        }
+    </style>
 
 
 </head>
@@ -25,10 +35,7 @@
         </nav>
     </header>
         <main>
-            <section id="home">
-                <img src="graduation3.png" class="background-overlay">
-            </div>
-            </section>
+           
             <hr class="section-divider">
             <img src="Dube.png" alt="Madhavi Dube" class="profile-img">
             <div class="bio">
