--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
         <main>
-           
+
             <hr class="section-divider">
             <img src="Dube.png" alt="Madhavi Dube" class="profile-img">
             <div class="bio">
@@ -182,7 +182,7 @@
             <p><strong>Phone:</strong> <a href="tel:+1234567890">+49 178 804 9303</a></p>
             <p><strong>Social:</strong></p>
             <a href="http://www.linkedin.com/in/madhavidube" target="_blank" rel="noopener noreferrer">
-            <img src="ln.png" alt="LinkedIn Profile" width="30" height="30">
+            <img src="Ln.png" alt="LinkedIn Profile" width="30" height="30">
             </a>
         </section>
     </main>
